fix: keep totem types in the order totems.yml declares them
TotemRegistry's constructor used Map.copyOf, which returns an immutable
HASH map and discards the LinkedHashMap ordering it was handed. all() and
ids() both promise config order, so /totems list and the tab-completion of
/totems give were emitting totem types in an arbitrary, JVM-dependent
sequence that could differ between restarts.

Replaced with an unmodifiable view over a LinkedHashMap copy, which keeps
both the immutability and the defensive copy the original intended.